Ingresscontroller-main/tododeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: todoapp
  labels:
    app: todoapp
spec: 
  replicas: 1
  strategy: 
    type: RollingUpdate
  selector:  # Moved selector here
    matchLabels:
      app: todoapp
  template:
    metadata: 
      labels:
        app: todoapp          
    spec: 
      containers: 
        - name: todo-container
          image: fazilasayyed/todo:latest
          resources: 
            requests:
              cpu: "25m"
              memory: "50Mi"
            limits:
              cpu: "50m"
              memory: "100Mi"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
