Ingresscontroller-main/studentservice.yml
apiVersion: v1
kind: Service
metadata: 
     name: studentapp
spec: 
  selector: 
       app: studentapp
  type: ClusterIP     
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: studentapp
