Ingresscontroller-main/todoservice.yml
apiVersion: v1
kind: Service
metadata: 
     name: todoapp
spec: 
  selector: 
       app: todoapp
  type: ClusterIP     
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: todoapp
